[project]
name = "posts"
version = "0.1.0"
description = "Asynchronous posts app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.0",
    "greenlet>=3.4.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
]
[tool.ruff.lint]
# Standard linting
select = ["E", "W", "F", "I"]